feat(extension inject): optimize the logic of get extension from cache